--- a/scss/partials/utilities/_variables.scss
+++ b/scss/partials/utilities/_variables.scss
@@ -5,6 +5,7 @@ $tw: 390px; // iphone 12 pro
 $sm: 414px; // iPhone Plus/Max sizes
 $md: 768px; // iPad
 $lg: 1024px; // iPad Pro
+$mb: 1280px;
 // $xl: 1285px; // Desktop
 $xl: 1441px;
 
