--- a/scss/partials/utilities/_variables.scss
+++ b/scss/partials/utilities/_variables.scss
@@ -9,6 +9,9 @@ $mb: 1280px;
 // $xl: 1285px; // Desktop
 $xl: 1441px;
 
+// height
+$xiHeight: 812px;
+
 // media query landscape sizes
 $lxs: 568px; // iphone 5 to X
 $lxi: 812px; // iphone xs
