--- a/scss/partials/base/_typography.scss
+++ b/scss/partials/base/_typography.scss
@@ -146,9 +146,32 @@ a{
     font-family: 'Lato', sans-serif;
 }
 
+// About section
+.about-description{
+    h2{
+        font-family: 'Lato', sans-serif;
+        font-weight: 900;
+        margin: 150px 0px 0 30px;
+        color: #1f1f1f;
+        @include mq($lg){
+            margin-left: 0;
+        }
+    }
+    p{
+        font-family: 'Lato', sans-serif;
+        margin: 30px 20px 0 30px;
+        line-height: 2em;
+        @include mq($lg){
+            margin-left: 0;
+        }
+    }
+}
+
+// Contact section
 #contact{
+    text-align: center;
     @include mq($tw){
-        margin-top: 700px;
+        // margin-top: 700px;
     }
     h2, h3{
         font-family: 'Lato', sans-serif;
@@ -156,20 +179,24 @@ a{
         color: #000;
     }
     h2{
+        color: #000;
         padding: 25px 15px;
         font-size: 1.5em;
         @include mq($md){
             font-size: 2em;
         }
     }
+    h3{
+        text-align: center;
+    }
 }
 #email{
     font-family: 'Lato', sans-serif;
 }
-
 .contact-card{
     font-family: 'Lato', sans-serif;
 }
+// Footer section
 footer{
     p{
         color: rgb(230, 230, 230);
@@ -181,4 +208,10 @@ footer{
             font-size: 1em;
         }
     }
+}
+
+.attribute{
+    font-size: 0.1em;
+    text-align: center;
+    margin-left: 100px;
 }
