--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,24 @@ main {
 #contact {
   margin-bottom: 70px;
 }
+@media only screen and (min-width: 1280px) {
+  #contact {
+    margin-top: 100px;
+    margin-bottom: 150px;
+    display: grid;
+    grid-template-columns: 60% 1fr;
+  }
+}
+
+.contact-description {
+  text-align: center;
+}
+@media only screen and (min-width: 1280px) {
+  .contact-description {
+    text-align: left;
+    margin-top: 175px;
+  }
+}
 
 footer {
   grid-area: footer;
@@ -577,17 +595,12 @@ a:visited {
   }
 }
 
-#contact {
-  text-align: center;
-}
 #contact h2, #contact h3 {
   font-family: "Lato", sans-serif;
-  margin: 20px auto;
   color: #000;
 }
 #contact h2 {
   color: #000;
-  padding: 25px 15px;
   font-size: 1.5em;
 }
 @media only screen and (min-width: 768px) {
@@ -595,10 +608,6 @@ a:visited {
     font-size: 2em;
   }
 }
-#contact h3 {
-  text-align: center;
-}
-
 #email {
   font-family: "Lato", sans-serif;
 }
@@ -621,9 +630,14 @@ footer p {
 }
 
 .attribute {
-  font-size: 0.1em;
+  font-size: 0.01em;
   text-align: center;
-  margin-left: 100px;
+  margin-left: 15%;
+}
+@media only screen and (min-width: 1024px) {
+  .attribute {
+    margin-left: 25%;
+  }
 }
 
 #main-nav {
@@ -877,7 +891,6 @@ button {
   #email {
     display: inline-block;
     padding: 15px 125px;
-    margin: 80px 50px;
   }
 }
 
@@ -903,6 +916,7 @@ button {
 @media only screen and (min-width: 768px) {
   #phone {
     padding: 14px 90px;
+    margin-left: 20px;
   }
 }
 
@@ -911,7 +925,7 @@ button {
 }
 
 #main-image {
-  background-image: url("../images/main-car-small.jpeg");
+  background-image: url("../images/main-car-small.jpg");
   background-size: cover;
   background-position: center;
   width: 100vw;
@@ -1096,13 +1110,19 @@ i {
   }
 }
 
+.contact-image {
+  width: 100%;
+  padding-bottom: 150px;
+  overflow: visible;
+}
 .contact-image img {
-  width: 80vw;
+  width: 100vw;
   overflow: visible;
 }
 @media only screen and (min-width: 1280px) {
   .contact-image img {
-    width: 30%;
+    width: 75%;
+    padding: 25px;
   }
 }
 
