--- a/scss/partials/component/_button.scss
+++ b/scss/partials/component/_button.scss
@@ -130,7 +130,7 @@ button{
     @include mq($md){
         display: inline-block;
         padding: 15px 125px;
-        margin: 80px 50px;
+        // margin: 80px 50px;
     }
 }
 #phone{
@@ -151,6 +151,7 @@ button{
     }
     @include mq($md){
         padding: 14px 90px;
+        margin-left: 20px;
     }
 }
 .phone-link{
