--- a/scss/partials/component/_image.scss
+++ b/scss/partials/component/_image.scss
@@ -1,5 +1,5 @@
 #main-image{
-    background-image: url("../images/main-car-small.jpeg");
+    background-image: url("../images/main-car-small.jpg");
     background-size: cover;
     background-position: center;
     width: 100vw;
@@ -165,11 +165,15 @@ i{
 }
 
 .contact-image{
+    width: 100%;
+    padding-bottom: 150px;
+    overflow: visible;
     img{
-        width: 80vw;
-        overflow: visible;
+        width: 100vw;
+        overflow: visible; 
         @include mq($mb){
-            width: 30%;
+            width: 75%;
+            padding: 25px;
         }
     }
 
