--- a/scss/partials/component/_image.scss
+++ b/scss/partials/component/_image.scss
@@ -161,16 +161,29 @@ i{
         width: 100%;
         margin: 90px;
         margin-bottom: 20px;
+        .attribute{
+            margin-left: 25%;
+        }
     }
 }
 
 .contact-image{
     width: 100%;
-    padding-bottom: 150px;
+    padding-bottom: 25px;
     overflow: visible;
+    text-align: center;
+    margin-bottom: 18%;
+    @include mq($md){
+        margin: 50px auto 100px;
+    }
+    @include mq($lg){
+        margin: 50px auto 320px;
+    }
     img{
         width: 100vw;
         overflow: visible; 
+        width: 70%;
+
         @include mq($mb){
             width: 75%;
             padding: 25px;
