--- a/scss/partials/base/_typography.scss
+++ b/scss/partials/base/_typography.scss
@@ -71,9 +71,12 @@ h3{
 
 #service-button{
     text-transform: uppercase;
-    font-size: 1.1em;
+    font-size: 0.9em;
     font-family: 'Lato', sans-serif;
     letter-spacing: 2px;
+    @include mq($xi){
+        font-size: 1.1em;
+    }
     
 }
 .service-title{
