--- a/css/styles.css
+++ b/css/styles.css
@@ -592,8 +592,13 @@ a:visited {
 .about-description h2 {
   font-family: "Lato", sans-serif;
   font-weight: 900;
-  margin: 150px 0px 0 30px;
+  margin: 80px 0 0 30px;
   color: #1f1f1f;
+}
+@media only screen and (min-width: 360px) {
+  .about-description h2 {
+    margin: 120px 0 0 30px;
+  }
 }
 @media only screen and (min-width: 1024px) {
   .about-description h2 {
