--- a/scss/partials/base/_typography.scss
+++ b/scss/partials/base/_typography.scss
@@ -161,8 +161,11 @@ a{
     h2{
         font-family: 'Lato', sans-serif;
         font-weight: 900;
-        margin: 150px 0px 0 30px;
+        margin: 80px 0 0 30px;
         color: #1f1f1f;
+        @include mq($xi){
+            margin: 120px 0 0 30px;
+        }
         @include mq($lg){
             margin-left: 0;
         }
