Arrow lower on xl size screen

--- a/scss/partials/component/_image.scss
+++ b/scss/partials/component/_image.scss
@@ -133,6 +133,11 @@ i{
         }
 
     }
+    @include mq($xl){
+        #arrow{
+            margin-top: 220px;
+        }
+    }
 
 }
 .fa-instagram{
