--- a/css/styles.css
+++ b/css/styles.css
@@ -1096,6 +1096,11 @@ i {
     z-index: 1000;
   }
 }
+@media only screen and (min-width: 1440px) {
+  #arrow-link #arrow {
+    margin-top: 220px;
+  }
+}
 
 .fa-instagram:hover {
   cursor: pointer;
